# hik-mvcamera-control

./: .gitignore  README.md  api.py  camera_operate.py  camera_set_param.py  global.py  logger.py  main.py  operate.py  pyproject.toml  setup.py
AreaScanCamera/BasicDemoByGenTL/: CamOperation_class.py
AreaScanCamera/MultipleCameras/: CamOperation_class.py
AreaScanCamera/ParametrizeCamera_AreaScanIOSettings/: ParametrizeCamera_AreaScanIOSettings.py
MvImport/: MvCameraControl_class.py
api/: api.py
control/: camera_context.py  camera_control.py  camera_image.py  camera_list.py  camera_operate.py  camera_set_param.py  camera_thread.py
src/api/: api.py
src/control/: camera_context.py  camera_operate.py  camera_set_param.py
src/exception/: camera_exception.py
src/hik_mvcamera_control/api/: api.cpp  api.py
src/hik_mvcamera_control/control/: camera_context.py  camera_control.py  camera_image.py  camera_set_param.py
src/hik_mvcamera_control/exception/: camera_exception.py
src/hik_mvcamera_control/include/: camera_control.h  camera_ori.h
src/hik_mvcamera_control/src/: camera_context.cpp  camera_control.cpp  camera_control.py  camera_image.cpp  camera_image.py  camera_operate.cpp  camera_operate.py  camera_set_param.cpp  camera_thread.cpp  camera_thread.py
src/hik_mvcamera_control/util/: util.py
src/test/: main.cpp  main.py
test/: main.py
