[build-system]
requires = ["setuptools>=80.9.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name="hik-mvcamera-control"
version="0.1.0"
authors = [
    { name = "spet", email = "snippet0809@users.noreply.github.com" }
]
description = "A Python package for controlling Hikvision cameras."
readme = "README.md"
requires-python = ">=3.11"
classifiers = [
    "Operating System :: windows",
]
